# ConvWatcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.server  README.md  docker-bake.json  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: docker-publish.yml  docker.yml
_progress/: PROGRESS.md
blueprint/: 00_project_overview.md  01_architecture.md  02_config_structs.md  03_processor_modules.md  04_watcher_system.md  05_health_server.md  06_utility_modules.md  07_file_manifest.md  08_build_deploy.md  09_migration_guide.md
config/: global.yaml  watchers.yaml  watchers.yaml.invalid
convwatcher-agent/: Cargo.toml
convwatcher-agent/src/: main.rs  runner.rs
convwatcher-common/: Cargo.toml
convwatcher-common/src/: config.rs  discovery.rs  ffmpeg.rs  lib.rs  protocol.rs  transport.rs
docs/review/: 00-index.md  01-processor.md  02-config.md  03-watcher.md  04-remote-worker.md  05-health-and-main.md  06-bugfix-verification.md  07-final-closeout.md
examples/: 01_minimal_video.yaml  02_full_pipeline.yaml  03_gpu_nvenc.yaml  04_gpu_vaapi.yaml  05_broadcast_mxf.yaml  06_audio_podcast.yaml  07_image_processing.yaml  08_pdf_processing.yaml  09_document_conversion.yaml  10_gpu_rkmpp.yaml  custom_presets.yaml  watcher_sample.yaml
scripts/: build-arm64.sh  build-docker-arm64.sh  install_linux.sh  install_macos.sh  install_windows.ps1
src/: cli.rs  lib.rs  main.rs
src/config/: codec_registry.rs  embedded.rs  global.rs  mod.rs  watch.rs
src/health/: dashboard.html  server.rs
src/logs/: error_logger.rs
src/processor/: audio.rs  disk.rs  document.rs  external.rs  image.rs  job.rs  mod.rs  namer.rs  pdf.rs  runner.rs  video.rs
src/utils/: hardware.rs  mod.rs  path.rs
src/watcher/: embedded.rs  mod.rs  monitor.rs
src/worker/: coordinator.rs  dispatch.rs  mod.rs
tests/: remote_worker_e2e.rs
