[package]
name = "convwatcher"
version = "0.9.6"
edition = "2021"
description = "A daemon that watches folders and automatically converts files"
license = "MIT"
repository = "https://github.com/katzzero/ConvWatcher"
authors = ["Katzzero"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
notify = "6.1"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
chrono = "0.4"
image = "0.25"
tiny_http = "0.12"
anyhow = "1.0"
subtle = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
