[package]
name = "convwatcher-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared protocol, transport and ffmpeg helpers for ConvWatcher server/agent"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
subtle = { workspace = true }
